src/test/deca/context/invalid/type-inequality-right.deca
// Description:
//    Comparaison de l'inégalité d'un booléen à droite
//
// Resultats:
//    Ligne 11: Le type ne respecte pas la règle 3.33.
//
// Historique:
//    cree le 14/01/2024

{
    print(0 < true);
}